<resources>
    <string name="app_name">projo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="logout">Logout</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Enter title</string>
    <string name="content">Enter the content</string>
    <string name="select_media">Select Media</string>
    <string name="submit_post">Post</string>
    <string name="enter_location_details">Enter location details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="datetime">Datetime</string>
    <string name="location">Location</string>
    <string name="report_title">Report Title</string>
    <string name="user_email">User Email</string>
    <string name="image_view">Image view</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_new_group">Add New Group</string>
    <string name="create_group_form">New group form</string>
    <string name="group_title">Group Title</string>
    <string name="sender_names">Sender Names</string>
    <string name="report_id">Report Id</string>
    <string name="reply">Reply</string>
    <string name="report_image">Report Image</string>
</resources>