<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Title input"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Content input"
        android:hint="@string/content"
        android:inputType="text" />

    <Button
        android:id="@+id/mediaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_media" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_post" />
</LinearLayout>